@@ -112,6 +112,8 @@ commit history.
           print documentation for advanced options, too.
         - Added previously undocumented advanced options to options reference.
         - Changed default for honor_original_bounds to no.
+          Variable bounds (see option bound_relax_factor) are now relaxed
+          by at most the value of constr_viol_tol.
 
 2021-0x-yy: 3.13.5
         - Allow to use --without-pardiso to disable check for MKL Pardiso [#454]
